# ImageWithMetadata

./: Cargo.toml
src/: lib.rs  main.rs  metadata.rs
src/exif/: jpeg.rs
