[package]
name = "imagewithexif"
version = "0.1.0"
authors = ["sclolus"]
description = "Simple crate made to extract the Exif Metadata from some image and save it to another, Only JPEG format supported for now"

[lib]
name = "imagewithexif"
path = "./src/lib.rs"

[dependencies]
image = "*"
byteorder = "1"